--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
 <% provide(:title, 'Home') %>
+<div class="center hero-unit">
 <h1>Home Page</h1>
-<p>
+<h2>
   This is the home page for the
-  Jynx sample application, currently under construction.
-</p>
+  Jynx application, currently under construction.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
