--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, 'Home') %>
 <div class="center hero-unit">
-<h1>Home Page</h1>
-<h2>
-  This is the home page for the
-  Jynx application, currently under construction.
-  </h2>
+	<h1>Home Page</h1>
+	<h2>
+  		This is the home page for the
+  		ynx application, currently under construction.
+  	</h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
