--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,9 @@
   		This is the home page for the
   		Jynx web application, currently under construction.
   	</h2>
-
+  	<% if !signed_in? %>
   	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  	<% end %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
