--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,11 +138,11 @@ aside {
       margin-top: 0px;
     }
   }
-}
 
-.gravatar {
-  float: left;
-  margin-right: 10px;
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+  }
 }
 
 /* forms */
@@ -170,4 +170,30 @@ input {
 .field_with_errors {
   @extend .control-group;
   @extend .error;
+}
+
+/* account settings */
+
+.account_settings{
+  .gravatar {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      }
+  text-align:center;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+    }
+  }
 }
