change to microposts

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,11 +6,11 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
-        <%= render 'shared/message_form' %>
+        <%= render 'shared/micropost_form' %>
       </section>
     </aside>
     <div class="span8">
-      <h3>Message Feed</h3>
+      <h3>Feed</h3>
       <%= render 'shared/feed' %>
     </div>
   </div>
