--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@message) do |f| %>
+<%= form_for(@micropost) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "Compose new message..." %>
+    <%= f.text_area :content, placeholder: "Compose new micropost..." %>
   </div>
   <%= f.submit "Send", class: "btn btn-large btn-primary" %>
 <% end %>
