--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -8,5 +8,5 @@
   <%= link_to "view my profile", current_user %>
 </span>
 <span>
-  <%= pluralize(current_user.messages.count, "message") %>
+  <%= pluralize(current_user.microposts.count, "micropost") %>
 </span>
