--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,8 +14,8 @@
   <div class="span8">
     <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
-      <h3>Inbox (<%= @user.microposts.count %>)</h3>
-      <ol class="inbox">
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
         <%= render @microposts %>
       </ol>
       <%= will_paginate @microposts %>
