--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -255,3 +255,37 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+/* chat */
+
+.another_user {
+  width: 700px;
+  display: block;
+  margin: auto;
+}
+
+
+.chatbox {
+
+     width: 700px;
+     height: 50px;
+     margin: auto;
+     display: block;
+     
+
+  .content {
+    display:none;
+    border-top: 1px solid #e8e8e8;
+    height: 30px;
+    padding-top:5px;
+  }
+
+  .timestamp {
+    display:none;
+  }
+
+  .new_message_div {
+  display:none;
+  }
+  
+}
