change id to name when creating message

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -5,22 +5,13 @@
   <div class="span6 offset3">
     <%= form_for @message, :url => user_messages_path(@user) do |f| %>
 
-      <% if @message.recepient_id.nil? %>
-      
         <%= f.label "To" %>
         <%= f.text_field :recepient_id %>
 
-      <% else %>
-      
-        <%= f.label "To" %>
-        <%= f.text_field :recepient_id, :value=>@message.recepient_id,:readonly => true %>
-      
-      <% end %>
-      
         <%= f.label "Message" %>
         <%= f.text_area :body %>
 
-        <%= f.submit "Send", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Send", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
