--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -308,12 +308,12 @@ aside {
 
 
     .timestamp {
-      float: right;
+      text-align: right;
     }
   }
 
   .new_message_div {
-  display:none;
+    display:none;
   }
   
 }
