--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -205,6 +205,7 @@ input {
 
 .account_settings{
   .gravatar {
+      float: none;
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -235,7 +236,7 @@ input {
 
   li {
     padding: 10px 0;
-    line-height: 27px;
+    
     border-top: 1px solid #e8e8e8;
   }
 }
