a first attempt at ide

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
                 <li><%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Inbox", user_messages_path(current_user) %></li>
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                <li><%= link_to "Uploads", user_uploads_path(current_user) %></li>
+                <li><%= link_to "IDE", user_uploads_path(current_user) %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Sign out", signout_path, method: "delete" %>
                 </li>
